app1/base/patches/deployment-env-secrets-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: APP_NAME-pod
