app1/base/patches/ingress-paths-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: DNS_PREFIXAPP_NAME.DNS_DOMAIN
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: APP_NAME-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: APP_NAME-service
                port:
                  number: 80
